--- a/smile/pom.xml
+++ b/smile/pom.xml
@@ -20,8 +20,9 @@
   <properties>
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/jaxrs/smile</packageVersion.dir>
-    <packageVersion.package>${project.groupId}.smile</packageVersion.package>
-    <osgi.export>${project.groupId}.smile.*;version=${project.version}</osgi.export>
+    <packageName>com.fasterxml.jackson.jaxrs</packageName>
+    <packageVersion.package>${packageName}.smile</packageVersion.package>
+    <osgi.export>${packageName}.smile.*;version=${project.version}</osgi.export>
     <!-- NOTE: JAXB annotations module is optional dependency, need to try to mark
          as such here.
       -->
